# jucenit

./: .gitignore  Cargo.toml  INTERNALS.md  README.md  class.ts  default.nix  flake.example.nix  flake.nix  flake.security-enhance.nix  flake.services.nix  globals.ts  jucenit.toml  mod.ts  module.nix  package.nix  pipelight.ts  request.ts  shell.nix  test.ts  types.ts
actions/: base.ts  mod.ts  ssl.ts
cast/: Cargo.toml
cast/src/: convert.rs  lib.rs  types.rs  unit.rs
cast/src/error/: mod.rs
cli/: Cargo.toml
cli/src/: lib.rs  types.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/types/: common.rs  config.rs  from.rs  mod.rs  unit.rs
entity/: Cargo.toml
entity/src/: action.rs  host.rs  lib.rs  listener.rs  match.rs  match_host.rs  match_listener.rs  mod.rs  ng_match.rs  post.rs  prelude.rs
examples/: cert_dummy.pem  jucenit.else.toml  jucenit.example.com.toml  jucenit.full.toml  jucenit.merge1.toml  jucenit.merge2.toml  jucenit.more.toml  jucenit.test.com.toml  jucenit.test_reverse_cast.toml  jucenit.toml  key_dummy.pem  unit.toml
jucenit/: Cargo.toml  jucenit.config.tmp.toml
jucenit/src/: main.rs
jucenit_core/: Cargo.toml
jucenit_core/src/: lib.rs
jucenit_core/src/cast/: common.rs  config.rs  from.rs  from_database.rs  mod.rs  to_database.rs
jucenit_core/src/cast/to_database/: delete.rs  insert.rs  methods.rs  mod.rs
jucenit_core/src/database/: crud.old.rs  crud.rs  mod.rs
jucenit_core/src/database/entity/: action.rs  host.rs  listener.rs  match_action.rs  match_host.rs  match_listener.rs  ng_match.rs  prelude.rs
jucenit_core/src/error/: mod.rs
jucenit_core/src/juce/: crud.rs  database.rs  from.rs  mod.rs
jucenit_core/src/mapping/: mod.rs
jucenit_core/src/nginx/: certificate.rs  config.rs  from.rs  from_database.rs  listen.rs  mod.rs  ops.rs  options.rs
jucenit_core/src/nginx/certificate/: crud.rs  mappings.rs  methods.rs  mod.rs
jucenit_core/src/nginx/config/: crud.rs  from.rs  merge.rs  mod.rs
jucenit_core/src/ssl/: fake.rs  letsencrypt.rs  mod.rs  pebble.rs
jucenit_core/src/types/: config.rs  from.rs  unit.rs
migration/: Cargo.toml  README.md
migration/src/: from.rs  lib.rs  m20240606_110915_create_table.rs  main.rs
request/: Cargo.toml
request/src/: getters.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/files/: methods.rs  test.rs
