[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
clap-verbosity = "2.1.0"
miette = "7.2.0"
serde = "1.0.200"
serde_toml = "0.0.1"
jucenit_core = { path = "../jucenit_core" }
assert_cmd = "2.0.14"
futures = "0.3.30"
