[package]
name = "jucenit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
cli = { path = "../cli"}
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
