[package]
name = "jucenit_core"
version = "0.2.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "1.0.59"
toml = "0.8.12"
utils = { path = "../utils" }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "h3", "brotli"] }
once_cell = "1.19.0"
uuid = "1.8.0"
acme2 = "0.5.1"
