[package]
name = "jucenit_core"
version = "0.2.0"
edition = "2021"

[dependencies]
migration = { path = "../migration" }
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "1.0.59"
toml = "0.8.12"
utils = { path = "../utils" }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "h3", "brotli"] }
once_cell = "1.19.0"
uuid = "1.8.0"
# acme2 = "0.5.1"
acme2 = { git = "https://github.com/pipelight/acme2" }
rcgen = "0.13.1"
http = "1.1.0"
openssl = "0.10.64"
notify = { version = "6.1.1", default-features = false, features = ["serde"] }
watchexec = "4.1.0"
watchexec-signals = { version = "3.0.0", features = ["serde"] }
watchexec-events = { version = "3.0.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
rayon = "1.10.0"
indexmap = { version = "2.2.6", features = ["serde", "rayon"] }
ron = { version = "0.8.1", features = ["indexmap"] }
sea-orm = { version = "0.12.15", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "macros",
  "mock",
] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }

[dev-dependencies]
serial_test = "3.1.1"
