[package]
name = "jucenit_core"
version = "0.2.0"
edition = "2021"

[dependencies]
pipelight = { git = "https://github.com/pipelight/pipelight", branch = "dev" } # utils = { git = "https://github.com/pipelight/pipelight?ref=dev" }
# acme2 = "0.5.1"
acme2 = { git = "https://github.com/pipelight/acme2" }
migration = { path = "../migration" }
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "1.0.59"
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "h3", "brotli"] }
once_cell = "1.19.0"
uuid = "1.8.0"
rcgen = "0.13.1"
http = "1.1.0"
openssl = "0.10.64"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
rayon = "1.10.0"
indexmap = { version = "2.2.6", features = ["serde", "rayon"] }
sea-orm = { version = "0.12.15", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "macros",
  "mock",
] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
serial_test = "3.1.1"
